--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -28,13 +28,13 @@ ul {
   max-width: 320px;
   margin-bottom: 16px;
 }
-.gallery-list {
+.gallery {
   display: flex;
   flex-wrap: wrap;
   margin-top: -30px;
   margin-left: -10px;
 }
-.gallery__item {
+.photo-card {
   margin-left: 30px;
   margin-top: 30px;
 }
@@ -49,4 +49,7 @@ ul {
   clip: rect(0 0 0 0);
   clip-path: inset(50%);
   margin: -1px;
+}
+.info {
+  display: flex;
 }
